--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "webrtc-signaling-server",
+  "name": "webrtc-numeric-id-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,6 +8,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.7.2"
   }
 }
