--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "webrtc-numeric-id-server",
+  "name": "webrtc-audio-demo",
   "version": "1.0.0",
+  "description": "A simple demo app for webrtc audio",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agilityfeat/webrtc-audio-demo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agilityfeat/webrtc-audio-demo/issues"
+  },
+  "homepage": "https://github.com/agilityfeat/webrtc-audio-demo#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.5.4"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   }
 }
